--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <div class="navbar-start">
                             <div class="dropdown">
                                 <div tabindex="0" role="button" class="btn btn-ghost bg-btn-background ">
-                                    <button class="text-xs  lg:text-xl rounded-md lg:px-4 lg:py-2">Blog</button>
+                                    <button id="blog-btn" class="text-xs  lg:text-xl rounded-md lg:px-4 lg:py-2">Blog</button>
                                 </div>
                             </div>
                         </div>
@@ -141,6 +141,7 @@
     <footer></footer>
     <script src="utilities.js"></script>
     <script src="donation-calculation.js"></script>
+    <script src="goto-Blog.js"></script>
 </body>
 
 </html>
