blog link with a href

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <div class="navbar-start">
                             <div class="dropdown">
                                 <div tabindex="0" role="button" class="btn btn-ghost bg-btn-background ">
-                                    <button id="blog-btn" class="text-xs  lg:text-xl rounded-md lg:px-4 lg:py-2">Blog</button>
+                                    <button id="blog-btn1" class="text-xs  lg:text-xl rounded-md lg:px-4 lg:py-2"><a href="blog.html">Blog</a></button>
                                 </div>
                             </div>
                         </div>
