--- a/blog.html
+++ b/blog.html
@@ -42,7 +42,7 @@
                         <div class="navbar-start">
                             <div class="dropdown">
                                 <div tabindex="0" role="button" class="btn btn-ghost bg-btn-background ">
-                                    <button id="home-btn1" class="text-xs  lg:text-xl rounded-md lg:px-4 lg:py-2"><a href="index.html">Home</a></button>
+                                    <button class="text-xs  lg:text-xl rounded-md lg:px-4 lg:py-2"><a href="index.html">Home</a></button>
                                 </div>
                             </div>
                         </div>
@@ -110,6 +110,5 @@
         </div>
     </main>
     <footer></footer>
-    <script src="/goto-home.js"></script>
 </body>
 </html>
