--- a/blog.html
+++ b/blog.html
@@ -35,7 +35,7 @@
 <body class="Lexend">
     <header class="w-full">
         <!-- Nav Div -->
-        <div class="w-full bg-amber-50 pb-4 lg:pb-11">
+        <div class="w-full bg-[rgb(249,247,243)] pb-4 lg:pb-11">
             <div class="md:container mx-auto">
                 <nav class="pt-3 lg:pt-6">
                     <div class="navbar">
@@ -109,6 +109,9 @@
             </div>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="w-full bg-[rgb(249,247,243)] pb-8 mt-8 lg:pb-44"></div>
+        </div>
+    </footer>
 </body>
 </html>
