--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body class="Lexend">
     <header class="w-full fixed overflow-hidden">
         <!-- Nav Div -->
-        <div class="w-full bg-amber-50 pb-4 lg:pb-11">
+        <div class="w-full bg-[rgb(249,247,243)] pb-4 lg:pb-11">
             <div class="md:container mx-auto">
                 <nav class="pt-3 lg:pt-6">
                     <div class="navbar">
@@ -138,7 +138,10 @@
         </section>
 
     </main>
-    <footer></footer>
+    <footer>
+        <div class="w-full bg-[rgb(249,247,243)] pb-8 mt-8 lg:pb-44">
+        </div>
+    </footer>
     <script src="utilities.js"></script>
     <script src="donation-calculation.js"></script>
 </body>
