Blog page Nav position Fixed

--- a/blog.html
+++ b/blog.html
@@ -33,9 +33,9 @@
             </script>
 </head>
 <body class="Lexend">
-    <header class="w-full">
+    <header class="w-full fixed overflow-hidden bg-opacity-15">
         <!-- Nav Div -->
-        <div class="w-full bg-[rgb(249,247,243)] pb-4 lg:pb-11">
+        <div class="w-full bg-[rgb(249,247,243)]  pb-4 lg:pb-11">
             <div class="md:container mx-auto">
                 <nav class="pt-3 lg:pt-6">
                     <div class="navbar">
@@ -64,9 +64,9 @@
             </div>
         </div>
     </header>
-    <main>
+    <main class="pt-28 lg:pt-48">
         <div class="md:container mx-auto">
-            <h1 class="my-7 px-6 lg:px-0 lg:text-5xl lg:my-14">Important FAQ</h1>
+            <h1 class="text-2xl mt-7 mb-5 px-6 lg:px-0 lg:text-5xl lg:my-14">Important FAQ</h1>
             <!-- Accordion Div -->
             <div class="p-3 space-y-3 lg:p-0">
                 <div class="join join-vertical w-full">
