--- a/blog.html
+++ b/blog.html
@@ -42,7 +42,7 @@
                         <div class="navbar-start">
                             <div class="dropdown">
                                 <div tabindex="0" role="button" class="btn btn-ghost bg-btn-background ">
-                                    <button class="text-xs  lg:text-xl rounded-md lg:px-4 lg:py-2"><a href="index.html">Home</a></button>
+                                    <a class="text-xs  lg:text-xl rounded-md lg:px-4 lg:py-2" href="index.html">Home</a>
                                 </div>
                             </div>
                         </div>
